--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -14,13 +14,13 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/home_tvFirst"
+            android:id="@+id/home_tvBasic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:text="@string/firstOption" />
         
-        <Button android:id="@+id/home_btnFirst"
+        <Button android:id="@+id/home_btnBasic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
