Does a lot. Should've committed sooner. Styles basic screen (again). Makes keypad show up properly on Basic screen. Adds all basic calculations.

--- a/res/layout/basic_results.xml
+++ b/res/layout/basic_results.xml
@@ -10,25 +10,26 @@
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
             <TextView
                 android:id="@+id/basic_tvSizeHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/sizeHeader" />
-            
+
             <TextView
                 android:id="@+id/basic_tvSumHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/sumHeader" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
@@ -37,40 +38,41 @@
                 android:id="@+id/basic_tvSizeResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="5" />
-            
+
             <TextView
                 android:id="@+id/basic_tvSumResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="20" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
             <TextView
                 android:id="@+id/basic_tvMeanHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/meanHeader" />
-            
+
             <TextView
                 android:id="@+id/basic_tvMedianHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/medianHeader" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
@@ -79,40 +81,41 @@
                 android:id="@+id/basic_tvMeanResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="13" />
-            
+
             <TextView
                 android:id="@+id/basic_tvMedianResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="17" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
             <TextView
                 android:id="@+id/basic_tvModeHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/modeHeader" />
-            
+
             <TextView
                 android:id="@+id/basic_tvRangeHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/rangeHeader" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
@@ -121,40 +124,41 @@
                 android:id="@+id/basic_tvModeResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="12" />
-            
+
             <TextView
                 android:id="@+id/basic_tvRangeResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="6" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
             <TextView
                 android:id="@+id/basic_tvVarSampleHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/varianceSampleHeader" />
-            
+
             <TextView
                 android:id="@+id/basic_tvVarPopHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/variancePopHeader" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
@@ -163,40 +167,41 @@
                 android:id="@+id/basic_tvVarSampleResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="1.345" />
-            
+
             <TextView
                 android:id="@+id/basic_tvVarPopResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="1.265" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
             <TextView
                 android:id="@+id/basic_tvStdDevSampleHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/stdDevSampleHeader" />
-            
+
             <TextView
                 android:id="@+id/basic_tvStdDevPopHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/stdDevPopHeader" />
         </TableRow>
-        
+
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
@@ -205,16 +210,16 @@
                 android:id="@+id/basic_tvStdDevSampleResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="1.934" />
-            
+
             <TextView
                 android:id="@+id/basic_tvStdDevPopResult"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="1.893" />
         </TableRow>
     </TableLayout>
