--- a/res/layout/keypad.xml
+++ b/res/layout/keypad.xml
@@ -1,140 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:background="#FFF" >
 
-    <TableLayout
+    <TableRow
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="0dp"
+        android:layout_weight="3" >
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3" >
+        <Button
+            android:id="@+id/keypad_one"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/one" />
 
-            <Button
-                android:id="@+id/keypad_one"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="1" />
+        <Button
+            android:id="@+id/keypad_two"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/two" />
 
-            <Button
-                android:id="@+id/keypad_two"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="2" />
+        <Button
+            android:id="@+id/keypad_three"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/three" />
 
-            <Button
-                android:id="@+id/keypad_three"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="3" />
-            
-            <Button
-                android:id="@+id/keypad_backspace"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Bkspc" />
-        </TableRow>
+        <Button
+            android:id="@+id/keypad_backspace"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="backSpace"
+            android:text="@string/backspace" />
+    </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3" >
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" >
 
-            <Button
-                android:id="@+id/keypad_four"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="4" />
+        <Button
+            android:id="@+id/keypad_four"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/four" />
 
-            <Button
-                android:id="@+id/keypad_five"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="5" />
+        <Button
+            android:id="@+id/keypad_five"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/five" />
 
-            <Button
-                android:id="@+id/keypad_six"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="6" />
-            
-            <Button
-                android:id="@+id/keypad_decimal"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="." />
-        </TableRow>
+        <Button
+            android:id="@+id/keypad_six"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/six" />
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3" >
+        <Button
+            android:id="@+id/keypad_decimal"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/period" />
+    </TableRow>
 
-            <Button
-                android:id="@+id/keypad_seven"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="7" />
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" >
 
-            <Button
-                android:id="@+id/keypad_eight"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="8" />
+        <Button
+            android:id="@+id/keypad_seven"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/seven" />
 
-            <Button
-                android:id="@+id/keypad_nine"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="9" />
-            
-            <Button
-                android:id="@+id/keypad_negative"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="-" />
-        </TableRow>
+        <Button
+            android:id="@+id/keypad_eight"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/eight" />
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3" >
-            
-            <Button
-                android:id="@+id/keypad_zero"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="0" />
+        <Button
+            android:id="@+id/keypad_nine"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/nine" />
 
-            <Button
-                android:id="@+id/keypad_next"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="2"
-                android:text="Next" />
+        <Button
+            android:id="@+id/keypad_negative"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/minus" />
+    </TableRow>
 
-            <Button
-                android:id="@+id/keypad_done"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Done" />
-        </TableRow>
-    </TableLayout>
-</LinearLayout>
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" >
+
+        <Button
+            android:id="@+id/keypad_zero"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/zero" />
+
+        <Button
+            android:id="@+id/keypad_next"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="2"
+            android:onClick="keypadPress"
+            android:text="@string/comma" />
+
+        <Button
+            android:id="@+id/keypad_done"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="donePress"
+            android:text="@string/done" />
+    </TableRow>
+
+</TableLayout>
