Small refactors and bug fixes. This issue is complete.

--- a/res/layout/keypad.xml
+++ b/res/layout/keypad.xml
@@ -132,7 +132,7 @@
             android:text="@string/zero" />
 
         <Button
-            android:id="@+id/keypad_next"
+            android:id="@+id/keypad_comma"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="2"
