--- a/res/layout/keypad.xml
+++ b/res/layout/keypad.xml
@@ -71,12 +71,12 @@
             android:text="@string/six" />
 
         <Button
-            android:id="@+id/keypad_decimal"
+            android:id="@+id/keypad_times"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:onClick="keypadPress"
-            android:text="@string/period" />
+            android:text="@string/times" />
     </TableRow>
 
     <TableRow
@@ -123,18 +123,26 @@
         android:layout_weight="3" >
 
         <Button
+            android:id="@+id/keypad_decimal"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="keypadPress"
+            android:text="@string/period" />
+
+        <Button
             android:id="@+id/keypad_zero"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:onClick="keypadPress"
             android:text="@string/zero" />
-
+        
         <Button
             android:id="@+id/keypad_comma"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:onClick="keypadPress"
             android:text="@string/comma" />
 
