--- a/res/layout/perm_comb.xml
+++ b/res/layout/perm_comb.xml
@@ -10,7 +10,6 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/pc_n"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -58,10 +57,11 @@
             android:text="n1,n2,n3,n4,...=" />
 
         <EditText
-            android:id="@+id/pc_etRVal"
+            android:id="@+id/pc_etNVals"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:digits="0123456789,"
             android:inputType="number" />
     </LinearLayout>
 
@@ -85,6 +85,7 @@
             android:text="n!" />
 
         <TextView
+            android:id="@+id/pc_tvNFact"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -106,6 +107,7 @@
             android:text="r!" />
 
         <TextView
+            android:id="@+id/pc_tvRFact"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -127,6 +129,7 @@
             android:text="nPr" />
 
         <TextView
+            android:id="@+id/pc_tvNPermR"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -148,6 +151,7 @@
             android:text="nCr" />
 
         <TextView
+            android:id="@+id/pc_tvNChooseR"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -169,6 +173,7 @@
             android:text="Indistinguishable Permutations" />
 
         <TextView
+            android:id="@+id/pc_tvIndistinct"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
