--- a/res/layout/perm_comb.xml
+++ b/res/layout/perm_comb.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center_horizontal|bottom"
-            android:text="n =" />
+            android:text="@string/pc_n" />
 
         <EditText
             android:id="@+id/pc_etNVal"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center_horizontal|bottom"
-            android:text="r =" />
+            android:text="@string/pc_r" />
 
         <EditText
             android:id="@+id/pc_etRVal"
@@ -54,7 +54,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="3"
             android:gravity="center_horizontal|bottom"
-            android:text="n1,n2,n3,n4,...=" />
+            android:text="@string/pc_ns" />
 
         <EditText
             android:id="@+id/pc_etNVals"
@@ -82,15 +82,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="n!" />
+            android:text="@string/n_fact" />
 
         <TextView
             android:id="@+id/pc_tvNFact"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="left"
-            android:text="120" />
+            android:gravity="left" />
     </LinearLayout>
 
     <LinearLayout
@@ -104,15 +103,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="r!" />
+            android:text="@string/r_fact" />
 
         <TextView
             android:id="@+id/pc_tvRFact"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="left"
-            android:text="6" />
+            android:gravity="left" />
     </LinearLayout>
 
     <LinearLayout
@@ -126,15 +124,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="nPr" />
+            android:text="@string/n_perm_r" />
 
         <TextView
             android:id="@+id/pc_tvNPermR"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="left"
-            android:text="6" />
+            android:gravity="left" />
     </LinearLayout>
 
     <LinearLayout
@@ -148,15 +145,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="nCr" />
+            android:text="@string/n_comb_r" />
 
         <TextView
             android:id="@+id/pc_tvNChooseR"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="left"
-            android:text="6" />
+            android:gravity="left" />
     </LinearLayout>
 
     <LinearLayout
@@ -170,15 +166,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="Indistinguishable Permutations" />
+            android:text="@string/indistinct_perm" />
 
         <TextView
             android:id="@+id/pc_tvIndistinct"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="left"
-            android:text="6" />
+            android:gravity="left" />
     </LinearLayout>
 
 </LinearLayout>
