--- a/res/layout/home_list_item.xml
+++ b/res/layout/home_list_item.xml
@@ -6,16 +6,16 @@
 
     <TextView
         android:id="@+id/home_tvListItem"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
+        android:layout_weight="8"
         android:singleLine="true" />
 
     <Button
         android:id="@+id/home_btnListItem"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:onClick="buttonClicked" />
 
 </LinearLayout>
