Fixes descriptive input to only allow numbers and select characters. Refactors BasicModel to work like PCModel. Frequency is now limited to 100,000

--- a/res/layout/basic.xml
+++ b/res/layout/basic.xml
@@ -8,7 +8,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/basicInputHint"
-        android:inputType="text" />
+        android:inputType="number"
+        android:digits="1234567890,.-x" />
 
     <FrameLayout
         android:id="@+id/basic_flContent"
