--- a/res/menu/basic.xml
+++ b/res/menu/basic.xml
@@ -4,5 +4,9 @@
         android:id="@+id/settings_save_list"
         android:showAsAction="never"
         android:title="@string/save_list"/>
+    <item
+        android:id="@+id/settings_load_list"
+        android:showAsAction="never"
+        android:title="@string/load_list"/>
 
 </menu>
