--- a/res/menu/basic.xml
+++ b/res/menu/basic.xml
@@ -7,6 +7,6 @@
     <item
         android:id="@+id/settings_load_list"
         android:showAsAction="never"
-        android:title="@string/load_list"/>
+        android:title="@string/load_or_delete_list"/>
 
 </menu>
