--- a/res/layout/save_list_dialog.xml
+++ b/res/layout/save_list_dialog.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="10dp" >
 
     <TextView
         android:layout_width="fill_parent"
@@ -14,6 +14,7 @@
     <EditText
         android:id="@+id/save_list_etListName"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="text" />
 
 </LinearLayout>
