--- a/res/menu/basic.xml
+++ b/res/menu/basic.xml
@@ -8,5 +8,9 @@
         android:id="@+id/settings_load_list"
         android:showAsAction="never"
         android:title="@string/load_or_delete_list"/>
+    <item
+        android:id="@+id/settings_reference"
+        android:showAsAction="never"
+        android:title="@string/reference_guide"/>
 
 </menu>
