--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity" >
 
-</ListView>
+    <TextView
+        android:id="@+id/home_tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/app_name" />
+
+    <Button
+        android:id="@+id/home_btnDescriptive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/descriptive_stats" />
+
+    <Button
+        android:id="@+id/home_btnPermComb"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/home_btnDescriptive"
+        android:layout_alignRight="@+id/home_btnDescriptive"
+        android:layout_below="@+id/home_btnDescriptive"
+        android:text="@string/permutations_combinations" />
+
+</RelativeLayout>
