--- a/res/drawable/blue_next_background.xml
+++ b/res/drawable/blue_next_background.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <solid android:color="#FEFEFA" />
-    
-    <size android:width="100dp"
-        android:height="100dp"/>
+
+    <size android:height="120dp" />
 
     <stroke
         android:width="3dp"
