--- a/res/layout/basic_result_item.xml
+++ b/res/layout/basic_result_item.xml
@@ -2,19 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:background="@drawable/list_item_background"
+    android:orientation="horizontal"
+    android:padding="10dp" >
 
     <TextView
         android:id="@+id/basic_tvResultTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3" />
+        android:layout_weight="3"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/basic_tvResultAnswer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="7"
-        android:gravity="right" />
+        android:gravity="right"
+        android:textSize="18sp" />
 
 </LinearLayout>
