--- a/res/drawable/key_button_comma.xml
+++ b/res/drawable/key_button_comma.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#FEFEFA" />
+    <solid android:color="#7EA7D8" />
 
     <stroke
         android:width="1dp"
-        android:color="#7EA7D8" />
+        android:color="#000" />
 
 </shape>
