--- a/res/drawable/input_background.xml
+++ b/res/drawable/input_background.xml
@@ -4,7 +4,7 @@
     <solid android:color="#FEFEFA" />
 
     <stroke
-        android:width="3dp"
-        android:color="#7EA7D8" />
+        android:width="1dp"
+        android:color="#000" />
 
 </shape>
