--- a/res/drawable/list_item_background.xml
+++ b/res/drawable/list_item_background.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <corners android:radius="3dp" />
-    
-    <solid android:color="#FEFEFA"/>
+    <solid android:color="#FEFEFA" />
+
+    <stroke
+        android:width="1dp"
+        android:color="#000" />
 
 </shape>
