--- a/res/layout/basic_result_item.xml
+++ b/res/layout/basic_result_item.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/list_item_background"
     android:orientation="horizontal"
-    android:padding="10dp" >
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp" >
 
     <TextView
         android:id="@+id/basic_tvResultTitle"
