--- a/res/layout/basic_results.xml
+++ b/res/layout/basic_results.xml
@@ -2,8 +2,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:dividerHeight="3dp"
-    android:divider="#0FFF"
-    android:padding="3dp" >
+    android:background="@drawable/input_background"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp" >
 
 </ListView>
