Basic layout is set up for permutations & combinations page.

--- a/res/layout/perm_comb.xml
+++ b/res/layout/perm_comb.xml
@@ -7,71 +7,97 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="6dp" >
 
-        <TextView
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="center_horizontal|bottom"
-            android:text="@string/pc_n" />
+            android:orientation="horizontal" >
 
-        <EditText
-            android:id="@+id/pc_etNVal"
-            android:layout_width="0dp"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="6dp"
+                android:layout_weight="1"
+                android:background="@drawable/black_border"
+                android:padding="10dp"
+                android:text="@string/pc_n" />
+
+            <EditText
+                android:id="@+id/pc_etNVal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/black_border"
+                android:hint="@string/n_hint"
+                android:imeOptions="actionNext"
+                android:inputType="number"
+                android:padding="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:imeOptions="actionNext"
-            android:inputType="number" />
-    </LinearLayout>
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="6dp"
+                android:layout_weight="1"
+                android:background="@drawable/black_border"
+                android:padding="10dp"
+                android:text="@string/pc_r" />
 
-        <TextView
-            android:layout_width="0dp"
+            <EditText
+                android:id="@+id/pc_etRVal"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:background="@drawable/black_border"
+                android:hint="@string/r_hint"
+                android:imeOptions="actionNext"
+                android:inputType="number"
+                android:padding="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="center_horizontal|bottom"
-            android:text="@string/pc_r" />
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal" >
 
-        <EditText
-            android:id="@+id/pc_etRVal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:imeOptions="actionNext"
-            android:inputType="number" />
-    </LinearLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="6dp"
+                android:layout_weight="1"
+                android:background="@drawable/black_border"
+                android:padding="10dp"
+                android:text="@string/pc_ns" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="3"
-            android:gravity="center_horizontal|bottom"
-            android:text="@string/pc_ns" />
-
-        <EditText
-            android:id="@+id/pc_etNVals"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:digits="0123456789,"
-            android:imeOptions="actionGo"
-            android:inputType="number" />
+            <EditText
+                android:id="@+id/pc_etNVals"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/black_border"
+                android:digits="0123456789,"
+                android:hint="@string/n_vals_hint"
+                android:imeOptions="actionGo"
+                android:inputType="number"
+                android:padding="10dp" />
+        </LinearLayout>
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/pc_flFrame"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:padding="10dp" />
+        android:padding="6dp" />
 
 </LinearLayout>
