Styling refactor to delete duplicate code. Changes 'special' keypad button style.

--- a/res/layout/basic.xml
+++ b/res/layout/basic.xml
@@ -10,7 +10,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_marginTop="6dp"
-        android:background="@drawable/input_background"
+        android:background="@drawable/black_border"
         android:digits="1234567890,.-x"
         android:hint="@string/basicInputHint"
         android:inputType="number"
