--- a/res/drawable/key_button_done.xml
+++ b/res/drawable/key_button_done.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#82CA9D" />
+    <solid android:color="#FEFEFA" />
 
     <stroke
-        android:width="1dp"
-        android:color="#000" />
+        android:width="3dp"
+        android:color="#82CA9D" />
 
 </shape>
