--- a/res/layout/basic_results.xml
+++ b/res/layout/basic_results.xml
@@ -2,7 +2,7 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/input_background"
+    android:background="@drawable/black_border"
     android:paddingLeft="8dp"
     android:paddingRight="8dp" >
 
